# GrandaProgrammingLanguage

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: classes.gra  hello.gra  modules_test.gra  polymorphism.gra  stdlib_test.gra  trait_defaults.gra  traits.gra
examples/modules/: math_utils.gra
runtime/: granda_rt.c  granda_rt.h
src/: ast.h  codegen.cpp  codegen.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  type_checker.cpp  type_checker.h
